--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esm": "^3.2.25"
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.21",
+    "esm": "^3.2.25",
+    "jest": "^29.3.1",
+    "prettier": "2.8.0"
   }
 }
