--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.21",
+    "@swc/jest": "^0.2.23",
+    "@types/jest": "^29.2.3",
     "esm": "^3.2.25",
     "jest": "^29.3.1",
-    "prettier": "2.8.0"
+    "prettier": "2.8.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   }
 }
