--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build:watch": "nodemon src/day-6/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +13,10 @@
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.2.4",
     "esm": "^3.2.25",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "prettier": "2.8.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
