--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build:watch": "nodemon src/day-6/main.js"
+    "build:watch": "nodemon src/day-10/main.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.21",
-    "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.4",
-    "esm": "^3.2.25",
+    "@types/node": "^18.11.13",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "2.8.0",
